src/theme/deployment/templates/_home_screen.scss
@import "../../mixins.scss";

/// home_screen
plh-tmpl-display-group .display-group-wrapper[data-param-style~="home_screen"] {
  @include flex-centered;
  border-radius: var(--ion-border-radius-secondary);
  width: 100%;
  height: var(--home-screen-height);
  justify-content: space-between;
  @media (max-width: 320px) {
    height: var(--home-screen-height-small);
  }
  // animated start icon
  plh-template-component[data-display-component="TmplLottieAnimation"] {
    @include flex-centered;
    flex-direction: column;
    // make offset slightly out of top
    margin-top: -30px;
    padding: var(--small-padding);
    max-width: 15%;
    @media (max-width: 1024px) {
      max-width: 20%;
    }
    @media (max-width: 768px) {
      max-width: 25%;
    }
    @media (max-width: 414px) {
      max-width: 48%;
    }
    @media (max-width: 375px) {
      max-width: 50%;
    }
  }

  // main content block (e.g. weekly workshops)
  plh-template-component:last-child {
    flex: 1;
    margin-left: var(--small-margin);
    height: 100%;
    @media (max-width: 375px) {
      h1 {
        font-size: var(--font-size-title-small-device) !important;
      }
    }
    @media (max-width: 320px) {
      h1 {
        font-size: 18px !important;
      }
    }
    plh-tmpl-display-group {
      height: 100%;
      display: flex;
      align-items: center;
      position: relative;
      padding: 10px 10px 40px 10px;
    }
  }

  // quick-access button
  plh-template-component[data-display-component="RoundIconButtonComponent"] {
    position: absolute;
    right: -15px;
    bottom: -15px;
  }
}

